--- a/mod.conf
+++ b/mod.conf
@@ -1,5 +1,5 @@
 name = motorboat
-depends = mobkit,default,biofuel
+depends = mobkit,default
 author = APercy
 description = Adds a craftable motorboat
 title = Motorboat
